--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -60,6 +60,8 @@ gui_drawing_area_board.h \
 gui_drawing_area_board.cpp \
 gui_drawing_area_show_pieces.cpp \
 gui_drawing_area_show_pieces.h   \
+gui_game1v1_config.cpp \
+gui_game1v1_config.h \
 gui_glade_defs.h \
 gui_main_window.cpp \
 gui_main_window.h \
