user can select type of players now with new config dialog. Computer vs computer game doesn't work properly though. It will have to be improved or dissallowed

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -56,6 +56,8 @@ game_total_allocation.h \
 gui_exception.h \
 gui_about_dialog.cpp \
 gui_about_dialog.h \
+gui_config_dialog.cpp \
+gui_config_dialog.h \
 gui_drawing_area_board.h \
 gui_drawing_area_board.cpp \
 gui_drawing_area_show_pieces.cpp \
