--- a/src/tests/Makefile.in
+++ b/src/tests/Makefile.in
@@ -51,7 +51,7 @@ am_blockemtest_OBJECTS = main_test.$(OBJEXT) game1v1_test.$(OBJEXT)
 blockemtest_OBJECTS = $(am_blockemtest_OBJECTS)
 blockemtest_DEPENDENCIES = ../board.o ../game1v1.o \
 	../game_total_allocation.o ../heuristic.o ../piece.o \
-	../player.o ../rules.o
+	../player.o ../rules.o ../bitwise.o
 DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/depcomp
 am__depfiles_maybe = depfiles
@@ -188,7 +188,16 @@ game1v1_test.h
 
 # this should be changed at some point. we should be crating a library with the base blockem classes
 # and then add that library to blockemtest_LIBADD
-blockemtest_LDADD = ../board.o ../game1v1.o ../game_total_allocation.o ../heuristic.o ../piece.o ../player.o ../rules.o
+blockemtest_LDADD = \
+../board.o \
+../game1v1.o \
+../game_total_allocation.o \
+../heuristic.o \
+../piece.o \
+../player.o \
+../rules.o \
+../bitwise.o
+
 all: all-am
 
 .SUFFIXES:
