--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -37,9 +37,14 @@ POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
 bin_PROGRAMS = blockem$(EXEEXT)
-@OS_WIN32_TRUE@am__append_1 = blockem_res.o
-@OS_WIN32_TRUE@am__append_2 = blockem_res.o
+
+#DATADIR in windows is the current directory
+# otherwise autotools "datadir" is used
+@OS_WIN32_TRUE@am__append_1 = -DDATADIR=./
+@OS_WIN32_FALSE@am__append_2 = -DDATADIR=\"$(datadir)/@PACKAGE@\"
 @OS_WIN32_TRUE@am__append_3 = blockem_res.o
+@OS_WIN32_TRUE@am__append_4 = blockem_res.o
+@OS_WIN32_TRUE@am__append_5 = blockem_res.o
 subdir = src
 DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
@@ -189,12 +194,13 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 INCLUDES = -I$(srcdir)
-AM_CXXFLAGS = $(GTKMM_CFLAGS) $(GLADEMM_CFLAGS) $(GTHREAD_CFLAGS) -DDATADIR=\"$(datadir)/@PACKAGE@\"
+AM_CXXFLAGS = $(GTKMM_CFLAGS) $(GLADEMM_CFLAGS) $(GTHREAD_CFLAGS) \
+	$(am__append_1) $(am__append_2)
 AM_LDFLAGS = 
-blockem_DEPENDENCIES = gui_glade_obj.o $(am__append_2)
+blockem_DEPENDENCIES = gui_glade_obj.o $(am__append_4)
 blockem_LDADD = gui_glade_obj.o $(GTKMM_LIBS) $(GLADEMM_LIBS) \
-	$(GTHREAD_LIBS) $(am__append_3)
-CLEANFILES = gui_glade_obj.o compiletime.h $(am__append_1)
+	$(GTHREAD_LIBS) $(am__append_5)
+CLEANFILES = gui_glade_obj.o compiletime.h $(am__append_3)
 EXTRA_DIST = \
 gui.glade    \
 blockem.rc
