--- a/src/tests/Makefile.am
+++ b/src/tests/Makefile.am
@@ -10,7 +10,9 @@ AM_CXXFLAGS =
 blockemtest_SOURCES = \
 main_test.cpp \
 game1v1_test.cpp \
-game1v1_test.h
+game1v1_test.h \
+piece_test.h \
+piece_test.cpp
 
 # this should be changed at some point. we should be crating a library with the base blockem classes
 # and then add that library to blockemtest_LIBADD
