--- a/src/tests/Makefile.in
+++ b/src/tests/Makefile.in
@@ -47,7 +47,8 @@ CONFIG_HEADER = $(top_builddir)/config.h
 CONFIG_CLEAN_FILES =
 CONFIG_CLEAN_VPATH_FILES =
 PROGRAMS = $(noinst_PROGRAMS)
-am_blockemtest_OBJECTS = main_test.$(OBJEXT) game1v1_test.$(OBJEXT)
+am_blockemtest_OBJECTS = main_test.$(OBJEXT) game1v1_test.$(OBJEXT) \
+	piece_test.$(OBJEXT)
 blockemtest_OBJECTS = $(am_blockemtest_OBJECTS)
 blockemtest_DEPENDENCIES = ../board.o ../game1v1.o \
 	../game_total_allocation.o ../heuristic.o ../piece.o \
@@ -183,7 +184,9 @@ AM_CXXFLAGS =
 blockemtest_SOURCES = \
 main_test.cpp \
 game1v1_test.cpp \
-game1v1_test.h
+game1v1_test.h \
+piece_test.h \
+piece_test.cpp
 
 
 # this should be changed at some point. we should be crating a library with the base blockem classes
@@ -247,6 +250,7 @@ distclean-compile:
 
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/game1v1_test.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/main_test.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/piece_test.Po@am__quote@
 
 .cpp.o:
 @am__fastdepCXX_TRUE@	$(CXXCOMPILE) -MT $@ -MD -MP -MF $(DEPDIR)/$*.Tpo -c -o $@ $<
