--- a/src/tests/Makefile.am
+++ b/src/tests/Makefile.am
@@ -12,7 +12,9 @@ main_test.cpp \
 game1v1_test.cpp \
 game1v1_test.h \
 piece_test.h \
-piece_test.cpp
+piece_test.cpp \
+player_test.h \
+player_test.cpp
 
 # this should be changed at some point. we should be crating a library with the base blockem classes
 # and then add that library to blockemtest_LIBADD
