--- a/src/tests/Makefile.in
+++ b/src/tests/Makefile.in
@@ -48,7 +48,7 @@ CONFIG_CLEAN_FILES =
 CONFIG_CLEAN_VPATH_FILES =
 PROGRAMS = $(noinst_PROGRAMS)
 am_blockemtest_OBJECTS = main_test.$(OBJEXT) game1v1_test.$(OBJEXT) \
-	piece_test.$(OBJEXT)
+	piece_test.$(OBJEXT) player_test.$(OBJEXT)
 blockemtest_OBJECTS = $(am_blockemtest_OBJECTS)
 blockemtest_DEPENDENCIES = ../board.o ../game1v1.o \
 	../game_total_allocation.o ../heuristic.o ../piece.o \
@@ -186,7 +186,9 @@ main_test.cpp \
 game1v1_test.cpp \
 game1v1_test.h \
 piece_test.h \
-piece_test.cpp
+piece_test.cpp \
+player_test.h \
+player_test.cpp
 
 
 # this should be changed at some point. we should be crating a library with the base blockem classes
@@ -251,6 +253,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/game1v1_test.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/main_test.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/piece_test.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/player_test.Po@am__quote@
 
 .cpp.o:
 @am__fastdepCXX_TRUE@	$(CXXCOMPILE) -MT $@ -MD -MP -MF $(DEPDIR)/$*.Tpo -c -o $@ $<
