--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -206,6 +206,11 @@ gui.glade    \
 blockem.rc
 
 blockem_SOURCES = \
+impl/board_impl.h \
+impl/g_blocking_queue_impl.h \
+impl/game1v1_impl.h \
+impl/piece_impl.h \
+impl/player_impl.h \
 bitwise.cpp \
 bitwise.h \
 board.cpp \
@@ -217,7 +222,6 @@ game1v1.h \
 game_total_allocation.cpp \
 game_total_allocation.h \
 g_blocking_queue.h \
-g_blocking_queue_impl.h \
 gui_exception.h \
 gui_about_dialog.cpp \
 gui_about_dialog.h \
