--- a/configure.ac
+++ b/configure.ac
@@ -6,12 +6,12 @@ AC_PREREQ([2.64])
 m4_define([MAJOR_VERSION], 0)
 m4_define([MINOR_VERSION], 2)
 m4_define([MICRO_VERSION], 3)
-m4_define([BLOCKEM_PACKAGE_NAME], blockem)
+m4_define([BLOCKEM_PACKAGE_NAME], [blockem])
 
 define([svnversion], esyscmd([sh -c "svnversion|tr -d '\n'"]))
 
 AC_INIT([BLOCKEM_PACKAGE_NAME], [MAJOR_VERSION.MINOR_VERSION.MICRO_VERSION], [frechilla -at- gmail -dot- com])
-AM_INIT_AUTOMAKE(blockem, [MAJOR_VERSION.MINOR_VERSION.MICRO_VERSION])
+AM_INIT_AUTOMAKE([BLOCKEM_PACKAGE_NAME], [MAJOR_VERSION.MINOR_VERSION.MICRO_VERSION])
 AC_CONFIG_SRCDIR([src/game1v1.cpp])
 AC_CONFIG_HEADERS([config.h])
 AC_DEFINE(SVN_REVISION, "svnversion", [SVN Revision])
