pixmaps deployment reworked

--- a/Makefile.am
+++ b/Makefile.am
@@ -10,12 +10,11 @@ pixmaps/blockemlogo16.png  \
 pixmaps/blockemlogo48.png  \
 pixmaps/blockemlogo.png
 
-pixmapdir = $(datadir)/@PACKAGE@/pixmaps
-
-pixmap_DATA = \
-pixmaps/blockemicon.ico    \
-pixmaps/blockemlogo128.png \
-pixmaps/blockemlogo16.png  \
-pixmaps/blockemlogo48.png  \
-pixmaps/blockemlogo.png
+pixmapsdir = $(datadir)/@PACKAGE@/pixmaps
+pixmaps_DATA = \
+blockemicon.ico    \
+blockemlogo128.png \
+blockemlogo16.png  \
+blockemlogo48.png  \
+blockemlogo.png
 
