fix trunk so it compiles now

--- a/Makefile.am
+++ b/Makefile.am
@@ -11,10 +11,12 @@ pixmaps/blockemlogo48.png  \
 pixmaps/blockemlogo.png
 
 pixmapsdir = $(datadir)/@PACKAGE@/pixmaps
+# note that 'pixmaps/' must be added in front because it is the directory
+# where these files are stored (relative path from the root of the package)
 pixmaps_DATA = \
-blockemicon.ico    \
-blockemlogo128.png \
-blockemlogo16.png  \
-blockemlogo48.png  \
-blockemlogo.png
+pixmaps/blockemicon.ico    \
+pixmaps/blockemlogo128.png \
+pixmaps/blockemlogo16.png  \
+pixmaps/blockemlogo48.png  \
+pixmaps/blockemlogo.png
 
