--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -251,7 +251,6 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-INCLUDES = -I$(top_srcdir)/lib
 AM_CXXFLAGS = $(GTKMM_CFLAGS) $(GTHREAD_CFLAGS) \
 	-DDATADIR=\"$(BLOCKEM_DATADIR)\" \
 	-DLOCALEDIR=\"$(BLOCKEM_LOCALEDIR)\"
@@ -625,6 +624,9 @@ uninstall-am: uninstall-binPROGRAMS
 	mostlyclean-generic pdf pdf-am ps ps-am tags uninstall \
 	uninstall-am uninstall-binPROGRAMS
 
+
+# gettext.h used to be in top/lib
+#INCLUDES = -I$(top_srcdir)/lib
 
 # DATADIR in the windows OS is set to the current directory
 @OS_WIN32_TRUE@    BLOCKEM_DATADIR ?= .
