win32 dependant change in Makefile.am was causing blockem to core in windows

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -39,13 +39,11 @@ main.o: compiletime.h
 
 blockem_DEPENDENCIES = gui_glade_obj.o
 
-blockem_LDADD = gui_glade_obj.o 
-if OS_WIN32    
-    # windows needs the path to the MinGW version of libintl, otherwise
-    # there will be errors due to "undefined reference to `__printf__'"
-    blockem_LDADD += -L/MinGW/lib
-endif
-blockem_LDADD += @LIBINTL@ @LIBICONV@ \
+# there is no need for @LIBICONV@:
+# libiconv is used to convert between a given text encoding and the user's 
+# encoding (...) for use on systems which don't have one, or whose implementation 
+# cannot convert from/to Unicode
+blockem_LDADD = gui_glade_obj.o @LIBINTL@ \
     $(GTKMM_LIBS) $(GLADEMM_LIBS) $(GTHREAD_LIBS)
 
 CLEANFILES = gui_glade_obj.o compiletime.h
