--- a/src/tests/Makefile.in
+++ b/src/tests/Makefile.in
@@ -68,6 +68,7 @@ am_blockemtest_OBJECTS = bitwise_test.$(OBJEXT) board_test.$(OBJEXT) \
 	rules_test.$(OBJEXT)
 blockemtest_OBJECTS = $(am_blockemtest_OBJECTS)
 am__DEPENDENCIES_1 =
+blockemtest_DEPENDENCIES = $(am__DEPENDENCIES_1) $(BLOCKEM_OBJS)
 DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/depcomp
 am__depfiles_maybe = depfiles
@@ -265,7 +266,7 @@ rules_test.h
 
 # this should be changed at some point. we should be crating a library with the base blockem classes
 # and then add that library to blockemtest_LIBADD
-blockemtest_DEPENDENCIES = \
+BLOCKEM_OBJS = \
 ../board.o \
 ../game1v1.o \
 ../game_total_allocation.o \
@@ -277,7 +278,8 @@ blockemtest_DEPENDENCIES = \
 
 blockemtest_LDADD = \
 @LIBINTL@ \
-$(GTHREAD_LIBS)
+$(GTHREAD_LIBS) \
+$(BLOCKEM_OBJS)
 
 all: all-am
 
